--- a/backend/templates/product/index.html.twig
+++ b/backend/templates/product/index.html.twig
@@ -1,20 +1,7 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ProductController!{% endblock %}
-
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>C:/Users/kubaj/Desktop/Code/Studia/CPUtopia/backend/src/Controller/ProductController.php</code></li>
-        <li>Your template at <code>C:/Users/kubaj/Desktop/Code/Studia/CPUtopia/backend/templates/product/index.html.twig</code></li>
-    </ul>
-</div>
+{% for product in products %}
+<h1>{{product.name}}</h1>
+{% endfor %}
 {% endblock %}
